@@ -93,6 +93,7 @@ parameters:
 - new parameter "constraints/indicator/genLogicor" to decide whether logicor constraints instead of cuts are generated
 - new parameter "constraints/indicator/sepaAlternativeLP" to decide whether separation takes place using the alternative LP
 - new parameter "constraints/linear/simplifyinequalities" to enable a simplification step for inequalities; default value is set to FALSE = disabled
+- new parameter "constraints/linear/dualpresolving" to disable dual presolving step in the linear constraint handler; default value is TRUE
 
 fixed bugs:
 - added handling of the case of roundable variables with 0 objective in presol_dualfix.c
